--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,8 @@ set ( CMAKE_CXX_STANDARD 11 )
 
 # Source
 set ( COMMON_ALL
-  
+  src/common/color.h
+  src/common/vec3.h
 )
 
 set ( SOURCE_ONE_WEEKEND
